# knitting_machine

./: .flake8  .gitignore  KnitData.py  PDDemulate.py  README.md  addpattern.py  brother.py  dumppattern.py  insertpattern.py  main.py  pyproject.toml  testKD.py
.github/workflows/: ci.yml
app/: api.py  brother_format.py  image.py  ports.py  serial_emulator.py  util.py
app/gui/: Gui.py
app/static/: frontend.html
app/tkapp/: Config.py  KnittingApp.py  Messages.py
docs/: MACHINE_INSTRUCTIONS.md
knitting_machine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legacy/: addpattern.py  dumppattern.py  guimain.py  insertpattern.py
remote/: fd_server.py  km_client.py
scratch/: README.md  controller_draft.py
test/: helpers.py  test_api.py  test_brother_format.py  test_brother_format_orig.py  test_image.py  test_image_and_api.py  test_image_processing.py  test_new_api_endpoints.py  test_serial_emulator.py  test_stage2_editor.py
